--- a/frontend/src/app/pacientes/triagem/formulario-triagem/classificacao-de-risco/classificacao-de-risco.component.scss
+++ b/frontend/src/app/pacientes/triagem/formulario-triagem/classificacao-de-risco/classificacao-de-risco.component.scss
@@ -1,17 +1,16 @@
 p-radioButton {
     margin-left: 15px;
     margin-right: 15px;
-    text-align: right;
-}
-.botoes {
-    text-align: right;
 }
 h4 {
-    margin-right: 150px;
-    text-align: right;
+    text-align: center;
 }
 img {
     height: 50px;
     width: 50px;
-    box-align: right;
+}
+H3 {
+    color: red;
+    text-align: right;
+    margin-right: 30px;
 }
