Atualização de cores de Classificação de Risco

--- a/frontend/src/app/pacientes/components/triagem/formulario-triagem/classificacao-de-risco/classificacao-de-risco.component.html
+++ b/frontend/src/app/pacientes/components/triagem/formulario-triagem/classificacao-de-risco/classificacao-de-risco.component.html
@@ -8,11 +8,12 @@
             </h3>
         </div>
         <div class="ui-g-1">
-            <img
+            <div
+                class="azul"
                 blueCard=""
                 pTooltip="Sem risco de agravo à saúde, pode aguardar atendimento"
-                src="https://escolaeducacao.com.br/wp-content/uploads/2019/08/cor-com-a-azul.jpg"
-            />
+                style="background-color: blue; height: 50px; width: 50px;"
+            ></div>
             <div blueCard="">
                 <p-radioButton
                     name="blue"
@@ -23,11 +24,12 @@
         </div>
 
         <div class="ui-g-1">
-            <img
+            <div
+                class="verde"
                 greenCard=""
                 pTooltip="Baixo risco de agravo a saúde, pode aguardar atendimento"
-                src="https://escolaeducacao.com.br/wp-content/uploads/2019/12/verde.jpg"
-            />
+                style="background-color: green; height: 50px; width: 50px;"
+            ></div>
             <div greenCard="">
                 <p-radioButton
                     name="green"
@@ -38,11 +40,13 @@
         </div>
 
         <div class="ui-g-1">
-            <img
+            <div
+                class="amarelo"
                 yellowCard=""
                 pTooltip="Necessita de atendimento rápido, mas pode aguardar"
-                src="https://escolaeducacao.com.br/wp-content/uploads/2019/08/com-com-a-amarelo.jpg"
-            />
+                style="background-color: yellow; height: 50px; width: 50px;"
+            ></div>
+
             <div yellowCard="">
                 <p-radioButton
                     name="yellow"
@@ -53,11 +57,12 @@
         </div>
 
         <div class="ui-g-1">
-            <img
+            <div
+                class="laranja"
                 orangeCard=""
                 pTooltip="Necessita de atendimento praticamente imediato"
-                src="https://escolaeducacao.com.br/wp-content/uploads/2019/11/cor-com-t-tangerina.jpg"
-            />
+                style="background-color: orange; height: 50px; width: 50px;"
+            ></div>
             <div orangeCard="">
                 <p-radioButton
                     name="orange"
@@ -68,11 +73,12 @@
         </div>
 
         <div class="ui-g-1">
-            <img
+            <div
+                class="vermelho"
                 redCard=""
                 pTooltip="Necessita de atendimento imediato"
-                src="https://escolaeducacao.com.br/wp-content/uploads/2019/11/cor-com-t-tomate.jpg"
-            />
+                style="background-color: red; height: 50px; width: 50px;"
+            ></div>
             <div redCard="">
                 <p-radioButton
                     name="red"
